<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_title_label"
            style="?android:listSeparatorTextViewStyle"
            />

        <EditText android:id="@+id/address_person"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_person_hint"
            />
        <EditText android:id="@+id/address_street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_street_hint"
            />
        <EditText android:id="@+id/address_building"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_building_hint"
            />
        <EditText android:id="@+id/address_office"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_office_hint"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>